src/test/deca/codegen/extension/valid/black-box/TAB_access_verify.deca
{
    int[][] tab = new int [4][4];
    tab[3][3] = 345;
    tab[3][2] = 456;
    tab[1][3] = 23565324;
    tab[2][3] = 18;
    tab[0][2] = 6;
    println(tab[1][3] + tab[2][3]); // 23565324 + 18 = 23565342
}