src/test/deca/codegen/extension/invalid/black-box/TAB_access_invalid_index3.deca
{
    int[][] a = new int[5][5];
    a[5][4];
}